<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_nickname"
        style="@style/ContactTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nickname"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1">


    </EditText>

    <EditText
        android:id="@+id/et_email_address"
        style="@style/ContactTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLength="30">


    </EditText>

    <EditText
        android:id="@+id/et_subject"
        style="@style/ContactTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/subject"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="30">


    </EditText>

    <EditText
        android:id="@+id/et_content"
        style="@style/ContactTextView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/content"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="50">


    </EditText>


    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/Submit" />
</LinearLayout>

